deploy/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    name: volunteeringips
  name: volunteeringips-deployment
  namespace: volunteeringips-dev
spec:
  replicas: 1
  selector:
    matchLabels:
      name: volunteeringips
  template:
    metadata:
      labels:
        name: volunteeringips
    spec:
      containers:
        - name: volunteeringips-app
          image: docker.io/%%dockerUser%%/volunteeringips:%%imageTag%%
          imagePullPolicy: Always
          resources:
            requests:
              memory: "356Mi"
              cpu: "350m"
            limits:
              memory: "612Mi"
              cpu: "600m"
      imagePullSecrets:
        - name: docker-registry
