deploy/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress
  namespace: volunteeringips-dev
  #annotations:
    #kubernetes.io/ingress.global-static-ip-name: "volunteering-ips-ingress-ip"
spec:
  backend:
    serviceName: volunteeringips-service
    servicePort: 80
